fixed overflow on cart page

--- a/src/components/cartItem/cartItem.css
+++ b/src/components/cartItem/cartItem.css
@@ -131,7 +131,7 @@
 }
 
 
-@media (max-width:620px){
+@media (max-width:635px){
 
     .cartItem{
         padding: 30px 5px;
@@ -153,7 +153,7 @@
 }
 
 
-@media (max-width:520px){
+@media (max-width:564px){
 
     .cartItem{
         flex-direction: column;
@@ -172,18 +172,18 @@
 
     .itemTextBig{
         font-weight: bold;
-        font-size: 5vw;
+        font-size: 4.2vw;
         color: #252525;
     }
 
 
     .auto{
         max-width: 150px;
-        font-size: 5vw;
+        font-size: 4vw;
     }
     
     .del{
-        font-size: 5vw;
+        font-size: 4vw;
     }
     
     .itemAmtWrap{
